--- a/cssproj/navbar.css
+++ b/cssproj/navbar.css
@@ -26,7 +26,7 @@
   }
   .navbar .nav-link {
     font-size: 20px;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     font-weight: bold;
     font-family:Arial, Helvetica, sans-serif
   }
