--- a/cssproj/services.css
+++ b/cssproj/services.css
@@ -15,8 +15,9 @@
   margin: 0 auto;
 }
 .card_image{
-  max-height: 500px;
-  max-width: 100%;
+  max-height: auto;
+  max-width: 300px;
+  margin: auto;
 }
 .imgR {
   max-width: 100%;
@@ -25,14 +26,15 @@
 
 .btnR {
   color: black;
-  padding: 0.8rem;
-  font-size: 14px;
+  padding: 0.3rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
   border-radius: 4px;
   font-weight: 600;
   display: block;
   /* margin-left: auto; */
-  width: 40%;
+  margin: auto  ;
+  width: 50%;
   cursor: pointer;
   border: 1px solid black;
   background: #8ac3ff;
@@ -44,11 +46,13 @@
 }
 .card_price{
   /* margin-top: 13px; */
+  font-size: 1rem;
   color: white;
 }
 .cards {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -61,15 +65,15 @@
   padding: 35px;
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 500px) {
   .cards_item {
-    width: 50%;
+    width: 400px;
   }
 }
 
-@media (min-width: 56rem) {
+@media (min-width: 600px) {
   .cards_item {
-    width: 33.3333%;
+    width: 350px;
   }
 }
 
@@ -83,13 +87,13 @@
 }
 
 .card_content {
-  padding: 1rem;
+  padding: 0.5rem;
   background: #343a40;
 }
 
 .card_title {
   color: white;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: capitalize;
